[package]
name = "exodus"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"
exclude = [
    "assets/",
]


[workspace]
members = [
    "crates/crypto",
    "crates/compression",
]

[dependencies]
log        = "0.4"
env_logger = "0.6"
rand       = "0.6"
byteorder  = "1.3"

clap       = "2.33"

mio      = { version = "0.6", default-features = false }
tun      = { version = "0.4", features = ["mio"] }
ctrlc    = { version = "3.1", features = ["termination"] }
smoltcp  = { version = "0.5", default-features = false, features = [ "std", "log", "proto-ipv4", "proto-ipv6" ] }

crypto      = { path = "crates/crypto" }
compression = { path = "crates/compression" }
znet        = {  git = "https://github.com/ExodusVPN/znet.git" }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "freebsd"))'.dependencies]
sysctl     = "0.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 3
panic = 'unwind'
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units = 3 # codegen-units ignored with lto=true
panic = 'unwind'
incremental = false
