[package]
name = "logging"
version = "0.1.0"
authors = ["luozijun <gnulinux@126.com>"]

[[example]]
name = "log"
path = "src/example.rs"

[dependencies]
log  = "0.3" # "0.4.1"
time = "0.1"
# 0.4.3 , 0.5.0-rc.1
env_logger = { version = "0.3", default-features = false, features = [] }
ansi_term  = "0.9"
