[package]
name = "netif"
version = "0.1.0"
authors = ["luozijun <gnulinux@126.com>"]

[[bin]]
name = "ip"
path = "bin/ip.rs"

[[bin]]
name = "bpf"
path = "src/bpf.rs"

[dependencies]
cfg-if = "0.1"
bitflags = "1.0"
ipnetwork = "0.12"
clap = "^2"

[dependencies.libc]
git = "https://github.com/rust-lang/libc"
branch = "master"
# version = ">=0.2.34"

[dependencies.nix]
git = "https://github.com/LuoZijun/nix"
branch = "patch-4"
# path = "../../nix"


[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
branch = "master"
default-features = false
features = [
    "std", "log",
    "proto-ipv4", "proto-ipv6",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp"
]

[target.'cfg(windows)'.dependencies]
winapi  = "0.2.8"
