[package]
name = "netif"
version = "0.1.0"
authors = ["luozijun <gnulinux@126.com>"]

[[bin]]
name = "ip"
path = "bin/ip.rs"

[[bin]]
name = "packetdump"
path = "bin/packetdump.rs"


[dependencies]
cfg-if = "0.1"
bitflags = "1.0"
ipnetwork = "0.12"

hwaddr   = { version = "0.1.3", default-features = false, features = [] }
clap     = { version = "2.29.0", default-features = false, features = [] }

[dependencies.libc]
git = "https://github.com/rust-lang/libc"
branch = "master"
# version = ">=0.2.34"

[target.'cfg(unix)'.dependencies.nix]
git = "https://github.com/nix-rust/nix.git"
branch = "master"


[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp"
branch = "master"
default-features = false
features = [
    "std", "log",
    "proto-ipv4", "proto-ipv6",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp"
]

[target.'cfg(windows)'.dependencies]
winapi  = "0.3.4"
