[package]
name = "nettunnel"
version = "0.1.0"
authors = ["luozijun <gnulinux@126.com>"]


[[bin]]
name = "nettunnel-server"
path = "src/bin/server.rs"

[[bin]]
name = "nettunnel-client"
path = "src/bin/client.rs"


[dependencies]
logging   = { path = "../logging" }
taptun    = { path = "../taptun" }
netpacket = { path = "../netpacket" }

byteorder = "1.1.0"
bincode   = "0.9.2"
serde     = "1.0.16"
serde_derive = "1.0.16"
rand         = "0.3.17"

rust-crypto = "0.2.36"

futures    = "0.1.16"
tokio-core = "0.1.10"
tokio-io   = "0.1.3"
mio        = "0.6.10"

[target.'cfg(unix)'.dependencies]
nix  = "0.9.0"
libc = "0.2.31"
