[package]
name = "nettunnel"
version = "0.1.0"
authors = ["luozijun <gnulinux@126.com>"]

[dependencies]
logging   = { path = "../logging" }
taptun    = { path = "../taptun" }
netpacket = { path = "../netpacket" }

clap = "^2"
byteorder = "1.1.0"
bincode   = "0.9.2"
serde     = "1.0.16"
serde_derive = "1.0.16"
rand         = "0.3.17"

rust-crypto = "0.2.36"
ring        = "0.12.1"

futures    = "0.1.16"
tokio-core = "0.1.10"
tokio-io   = "0.1.3"
mio        = "0.6.10"
mio-more   = "0.1.0"

ctrlc = { version = "3.0", features = ["termination"] }

pnet = "0.20.0"

[target.'cfg(unix)'.dependencies]
nix  = "0.9.0"
libc = "0.2.31"

[profile.dev]
opt-level = 9
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[profile.release]
opt-level = 9
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'