[package]
authors = ["realityone <realityone@me.com>"]
name = "taptun"
version = "0.1.0"

[target]
[target."cfg(unix)"]

[dependencies]
netpacket = { path = "../netpacket" }
logging   = { path = "../logging" }

futures    = "0.1.16"
tokio-core = "0.1.10"
tokio-io   = "0.1.3"

# futures    = "0.1.16"
# tokio-core = "0.1.9"

mio = "0.6.10"

error-chain = "0.11.0"
crc = "1.5.0"


[target."cfg(unix)".dependencies]
ioctl-sys = "0.5.2"
libc = "0.2.31"
