[package]
name = "crypto"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

[dependencies]
chacha20-poly1305-aead = "0.1"
ed25519-dalek = "1.0.0-pre.1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies.miscreant]
version = "0.4"
features = ["default"]

[target.'cfg(not(any(target_arch = "x86_64", target_arch = "x86")))'.dependencies.miscreant]
version = "0.4"
features = ["default", "soft-aes"]

[features]
