[package]
name = "netlink"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log       = "0.4"
libc      = "0.2"
bitflags  = "1.1"
byteorder = "1.3"
smoltcp   = { version = "0.5", default-features = false, features = [ "std", "log", "proto-ipv4", "proto-ipv6" ] }