[package]
name = "sysconfig"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "windows")'.dependencies]


[target.'cfg(unix)'.dependencies]
libc   = "0.2"
nix    = "0.15"
sysctl = { path = "../sysctl" }

[target.'cfg(target_os = "macos")'.dependencies]
# pfctl                = "0.2"
core-foundation      = "0.6"
system-configuration = "0.2"
