[package]
name = "sysconfig"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log     = "0.4"
smoltcp = { version = "0.5", default-features = false, features = [ "std", "log", "proto-ipv4", "proto-ipv6" ] }

[target.'cfg(unix)'.dependencies]
libc   = "0.2"
sysctl = { path = "../sysctl" }

[target.'cfg(target_os = "macos")'.dependencies]
# pfctl                = "0.2"
core-foundation      = "0.9"
system-configuration = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
